--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,39 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle as pc\n",
     "import numpy as np\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import h5py\n",
+    "from multiprocessing import Pool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_of_files = subprocess.getoutput(\"ls regions/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "list_of_files =  list_of_files.split('\\n')"
+    "list_of_files = subprocess.getoutput(\"ls iccv09Data/labels/\").split('\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "715"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list_of_files[0:740])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def open_file(path):\n",
@@ -48,8 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def numpify(txt):\n",
@@ -72,8 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def one_hot_encodify(labels_mat):\n",
@@ -94,24 +118,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "241"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "y=open_file(\"./regions/0000047.regions.txt\")"
+    "len(y.split('\\n'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y=open_file(\"./iccv09Data/labels/0000047.regions.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "240\n",
-      "320\n"
+      "CPU times: user 48 ms, sys: 0 ns, total: 48 ms\n",
+      "Wall time: 45.6 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 5, 5, 5],\n",
+       "       [0, 0, 0, ..., 5, 5, 5],\n",
+       "       [0, 0, 0, ..., 5, 5, 5],\n",
+       "       ..., \n",
+       "       [2, 2, 2, ..., 2, 2, 2],\n",
+       "       [2, 2, 2, ..., 2, 2, 2],\n",
+       "       [2, 2, 2, ..., 2, 2, 2]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time numpify(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.84 s, sys: 0 ns, total: 5.84 s\n",
+      "Wall time: 5.83 s\n"
      ]
     },
     {
@@ -120,19 +206,21 @@
        "(8, 240, 320)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "one_hot_encodify(numpify(y)).shape"
+    "%time one_hot_encodify(numpify(y)).shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "one_hot_encodings = []"
@@ -140,8 +228,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "not_processed=[]"
@@ -149,194 +239,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0000382.regions.txt\n",
-      "0000631.regions.txt\n",
-      "0000697.regions.txt\n",
-      "0000759.regions.txt\n",
-      "0000794.regions.txt\n",
-      "0003178.regions.txt\n",
-      "0003423.regions.txt\n",
-      "0003463.regions.txt\n",
-      "0003957.regions.txt\n",
-      "0004774.regions.txt\n",
-      "0007323.regions.txt\n",
-      "0007545.regions.txt\n",
-      "0009212.regions.txt\n",
-      "0011003.regions.txt\n",
-      "0100026.regions.txt\n",
-      "0100061.regions.txt\n",
-      "0100113.regions.txt\n",
-      "0100132.regions.txt\n",
-      "0100477.regions.txt\n",
-      "0100579.regions.txt\n",
-      "0100628.regions.txt\n",
-      "0100787.regions.txt\n",
-      "0100822.regions.txt\n",
-      "0101060.regions.txt\n",
-      "0101434.regions.txt\n",
-      "0101488.regions.txt\n",
-      "0101492.regions.txt\n",
-      "0102039.regions.txt\n",
-      "0102534.regions.txt\n",
-      "0103344.regions.txt\n",
-      "0104194.regions.txt\n",
-      "0104439.regions.txt\n",
-      "0104958.regions.txt\n",
-      "0105146.regions.txt\n",
-      "1000061.regions.txt\n",
-      "1001195.regions.txt\n",
-      "1001252.regions.txt\n",
-      "1001685.regions.txt\n",
-      "1001688.regions.txt\n",
-      "1001770.regions.txt\n",
-      "1001875.regions.txt\n",
-      "1100001.regions.txt\n",
-      "1100003.regions.txt\n",
-      "1100004.regions.txt\n",
-      "1100005.regions.txt\n",
-      "1100006.regions.txt\n",
-      "1100011.regions.txt\n",
-      "1100014.regions.txt\n",
-      "1100025.regions.txt\n",
-      "1100027.regions.txt\n",
-      "1100029.regions.txt\n",
-      "1100030.regions.txt\n",
-      "1100031.regions.txt\n",
-      "2000001.regions.txt\n",
-      "2000004.regions.txt\n",
-      "2000008.regions.txt\n",
-      "2000019.regions.txt\n",
-      "2000025.regions.txt\n",
-      "2000028.regions.txt\n",
-      "2000033.regions.txt\n",
-      "2000037.regions.txt\n",
-      "2000041.regions.txt\n",
-      "2000044.regions.txt\n",
-      "3000676.regions.txt\n",
-      "3000716.regions.txt\n",
-      "3000759.regions.txt\n",
-      "3000945.regions.txt\n",
-      "3001018.regions.txt\n",
-      "3001061.regions.txt\n",
-      "3001131.regions.txt\n",
-      "3001336.regions.txt\n",
-      "3001555.regions.txt\n",
-      "3001751.regions.txt\n",
-      "3001976.regions.txt\n",
-      "3002020.regions.txt\n",
-      "3002059.regions.txt\n",
-      "3002082.regions.txt\n",
-      "3002221.regions.txt\n",
-      "3002411.regions.txt\n",
-      "3002905.regions.txt\n",
-      "3003322.regions.txt\n",
-      "3003328.regions.txt\n",
-      "3003817.regions.txt\n",
-      "5000016.regions.txt\n",
-      "5000119.regions.txt\n",
-      "5000120.regions.txt\n",
-      "5000121.regions.txt\n",
-      "5000122.regions.txt\n",
-      "5000123.regions.txt\n",
-      "5000124.regions.txt\n",
-      "5000125.regions.txt\n",
-      "5000126.regions.txt\n",
-      "5000127.regions.txt\n",
-      "5000129.regions.txt\n",
-      "5000130.regions.txt\n",
-      "5000131.regions.txt\n",
-      "5000132.regions.txt\n",
-      "5000133.regions.txt\n",
-      "5000137.regions.txt\n",
-      "5000147.regions.txt\n",
-      "5000149.regions.txt\n",
-      "5000175.regions.txt\n",
-      "5000176.regions.txt\n",
-      "5000180.regions.txt\n",
-      "5000181.regions.txt\n",
-      "5000182.regions.txt\n",
-      "5000183.regions.txt\n",
-      "5000184.regions.txt\n",
-      "5000188.regions.txt\n",
-      "5000190.regions.txt\n",
-      "5000191.regions.txt\n",
-      "5000192.regions.txt\n",
-      "5000194.regions.txt\n",
-      "5000195.regions.txt\n",
-      "5000196.regions.txt\n",
-      "5000197.regions.txt\n",
-      "5000198.regions.txt\n",
-      "5000199.regions.txt\n",
-      "5000200.regions.txt\n",
-      "5000201.regions.txt\n",
-      "5000202.regions.txt\n",
-      "5000203.regions.txt\n",
-      "5000204.regions.txt\n",
-      "5000205.regions.txt\n",
-      "5000226.regions.txt\n",
-      "5000234.regions.txt\n",
-      "5000257.regions.txt\n",
-      "5000264.regions.txt\n",
-      "5000265.regions.txt\n",
-      "6000054.regions.txt\n",
-      "6000068.regions.txt\n",
-      "6000318.regions.txt\n",
-      "8002764.regions.txt\n",
-      "8003131.regions.txt\n",
-      "8003952.regions.txt\n",
-      "8004573.regions.txt\n",
-      "8005616.regions.txt\n",
-      "8008099.regions.txt\n",
-      "8008998.regions.txt\n",
-      "9000001.regions.txt\n",
-      "9000003.regions.txt\n",
-      "9000210.regions.txt\n",
-      "9001034.regions.txt\n",
-      "9001071.regions.txt\n",
-      "9002004.regions.txt\n",
-      "9002827.regions.txt\n",
-      "9003234.regions.txt\n",
-      "9003250.regions.txt\n",
-      "9003378.regions.txt\n",
-      "9003585.regions.txt\n",
-      "9004766.regions.txt\n",
-      "9004879.regions.txt\n",
-      "9004965.regions.txt\n",
-      "9005105.regions.txt\n",
-      "9005273.regions.txt\n"
-     ]
-    }
-   ],
-   "source": [
-    "for file in list_of_files:\n",
-    "    try:\n",
-    "        one_hot_encodings.append(one_hot_encodify(numpify(open_file(\"./regions/\" + file))))\n",
-    "    except ValueError:\n",
-    "        print(file)\n",
-    "        not_processed.append(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "155"
+       "'./h5py/h5py_0000072.regions.txt'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'./h5py/h5py_'+list_of_files[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with h5py.File('./h5py/h5py_'+list_of_files[3],'w') as hf:\n",
+    "    hf.create_dataset('OHE', data=one_hot_encodify(numpify(open_file(\"./iccv09Data/labels/\" + list_of_files[3]))),compression='gzip',compression_opts=9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def oheify(list_of_files):\n",
+    "    for file in list_of_files:\n",
+    "#         print(one_hot_encodify(numpify(open_file(\"./iccv09Data/labels/\" + file))))\n",
+    "        try:\n",
+    "            print(\"Processing file {}  ...\".format(file))\n",
+    "            with h5py.File('./h5py/h5py_'+file,'w') as hf:\n",
+    "                hf.create_dataset('OHE', data=one_hot_encodify(numpify(open_file(\"./iccv09Data/labels/\" + file))),compression='gzip',compression_opts=9)\n",
+    "        except ValueError:\n",
+    "            print(file)\n",
+    "            not_processed.append(file)\n",
+    "        except Exception as e:\n",
+    "            print('Exception : ',file, ' ' , e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pool = Pool(processes=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(20):\n",
+    "    pool.apply_async(oheify,[list_of_files[40*i:40*(i+1)]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,18 +341,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "processed_files = [i for i in list_of_files if i not in not_processed]"
+    "processed_files = [i for i in list_of_files if 'h5py_'+i not in not_retain]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "560"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(processed_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
+   "source": [
+    "h55ied = subprocess.getoutput('ls h5py/').split('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'36864'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "not_retain = []\n",
+    "for i in h55ied:\n",
+    "    if int(subprocess.getoutput('stat --printf=\"%s\" h5py/'+i)) < 1000:\n",
+    "        not_retain.append(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "with open('processed_files.pkl','wb') as f:\n",
     "    pc.dump(processed_files,f)"
@@ -366,9 +429,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
+   "source": [
+    "import pickle as pc\n",
+    "pro = []\n",
+    "with open('processed_files.pkl','rb') as f:\n",
+    "    pro = pc.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "not_ther = [i for i in list_of_files if i not in pro]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in not_ther:\n",
+    "    subprocess.getoutput('rm iccv09Data/images/'+i.split('.')[0]+'.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"  File: 'iccv09Data/images/9005273.jpg'\\n  Size: 11460     \\tBlocks: 24         IO Block: 4096   regular file\\nDevice: 805h/2053d\\tInode: 3181262     Links: 1\\nAccess: (0644/-rw-r--r--)  Uid: ( 1000/   dibya)   Gid: ( 1000/   dibya)\\nAccess: 2018-04-30 13:54:16.903570721 +0530\\nModify: 2009-07-08 05:20:32.000000000 +0530\\nChange: 2018-01-15 22:40:01.435712532 +0530\\n Birth: -\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0102435.jpg'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pro[45].split('.')[0]+'.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in not_retain:\n",
+    "    subprocess.getoutput('rm h5py/'+i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "with open('1_hot_encodings_processed.pkl','wb') as f:\n",
     "    pc.dump(one_hot_encodings,f)"
@@ -377,17 +531,17 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "u = np.array(one_hot_encodings)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "np.save(open(\"test\",'wb'),u)"
    ]
